--- a/.github/workflows/ssh-agent.yml
+++ b/.github/workflows/ssh-agent.yml
@@ -5,7 +5,8 @@ on:
       - main
 
 jobs:
-  ssh-agent: runs-on:ubuntu-24.04
+  ssh-agent: 
+    runs-on:ubuntu-24.04
 
   steps:
     - name: run ssh-agent
