--- a/.github/workflows/ssh-agent.yml
+++ b/.github/workflows/ssh-agent.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-24.04
 
   steps:
-    - name: run ssh-agent
+    - name: Run ssh-agent
       uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{secrets.SSH_PRIVATE_KEY}}
