--- a/.github/workflows/ssh-agent.yml
+++ b/.github/workflows/ssh-agent.yml
@@ -1,16 +1,29 @@
-name: ssh
+name: SSH-Agent
 
 on:
   push:
+    paths:
+      - ".github/workflows/ssh-agent.yml"
     branches:
       - main
-
 jobs:
   ssh-agent:
     runs-on: ubuntu-24.04
 
     steps:
-      - name: Run ssh-agent
+      - name: Checkout code
+        uses: actions/checkout@v4.2.2
+
+      - name: webfactory/ssh-agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Add Host Key to Known Hosts
+        run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts || true
+
+      - name: Run remote command test
+        run: ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} "touch 'hello-world.txt'"
+
+      - name: Copy README.md file
+        run: scp -P ${{ secrets.SSH_PORT }} README.md ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }}:~/
